--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.556.0",
     "recharts": "^3.5.1",
     "react-dom": "^19.2.1",
-    "@google/genai": "^1.32.0"
+    "@google/genai": "^1.32.0",
+    "@supabase/supabase-js": "2.45.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
