--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "recharts": "^3.5.1",
-    "react-dom": "^19.2.1",
-    "@google/genai": "^1.32.0",
-    "@supabase/supabase-js": "2.45.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.34.0",
+    "recharts": "^3.6.0",
+    "lucide-react": "^0.562.0",
+    "@supabase/supabase-js": "^2.89.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
