--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
     "lucide-react": "^0.562.0",
-    "firebase": "^12.7.0"
+    "@supabase/supabase-js": "2.45.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
