--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
     "lucide-react": "^0.562.0",
-    "@supabase/supabase-js": "2.39.0"
+    "pocketbase": "0.21.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
