--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0",
-    "pocketbase": "0.21.3"
+    "lucide-react": "0.330.0",
+    "recharts": "2.12.0",
+    "@google/genai": "0.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
