--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.3.1",
     "lucide-react": "0.330.0",
     "recharts": "^2.12.0",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "*",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
